<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Trivialix</string>
    <string name="comenzar">¡ADELANTE!</string>

    <string name="enunciadoPregunta1">¿Cuál es la famosa secuencia de números que aparece en la serie de «PERDIDOS»?</string>
    <string name="_4_8_15_16_23_42">4 8 15 16 23 42</string>
    <string name="_4_8_15_16_23_32">4 8 15 16 23 32</string>
    <string name="_4_8_15_18_37_56">4 8 15 18 37 56</string>
    <string name="_4_8_10_23_36_56">4 8 10 23 36 56</string>

    <string name="enunciadoPregunta2">¿Cómo se llaman los protagonistas de la serie «BATES MOTEL»?</string>
    <string name="mandy_y_bob_motel">Mandy y Bob Motel</string>
    <string name="alice_y_alex_romero">Alice y Alex Romero</string>
    <string name="wendy_y_billy_hudson">Wendy y Billy Hudson</string>
    <string name="norma_y_norman_bates">Norma y Norman Bates</string>

    <string name="enunciadoPregunta3">¿Qué día desaparece Will Byers en la serie de «STRANGER THINGS»?</string>
    <string name="_5_de_noviembre_1983">5 de noviembre 1983</string>
    <string name="_10_de_noviembre_1983">10 de noviembre 1983</string>
    <string name="_6_de_noviembre_1983">6 de noviembre 1983</string>
    <string name="_8_de_noviembre_1983">8 de noviembre 1983</string>

    <string name="enunciadoPregunta4">¿Quiénes son estos personajes de la serie «CRÓNICAS VAMPÍRICAS?</string>
    <string name="matt_elena_niklaus">Matt, Elena, Niklaus</string>
    <string name="alaric_hayley_jeremy">Alaric, Hayley, Jeremy</string>
    <string name="stefan_katherine_damon">Stefan, Katherine, Damon</string>
    <string name="enzo_bonnie_y_damon">Enzo, Bonnie y Damon</string>


    <string name="enunciadoPregunta5">¿Qué Pokémon tiene más debilidades?</string>
    <string name="hydreigon">hydreigon</string>
    <string name="charizard">charizard</string>
    <string name="umbreon">umbreon</string>
    <string name="articuno">articuno</string>

    <string name="siguiente">Siguiente</string>
    <string name="reintentar">reintentar</string>


    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="tematica">Tematica</string>
    <string name="_00_30">00:30</string>
    <string name="opcion_a">Opcion a</string>
    <string name="pregunta">pregunta</string>
    <string name="opcion_b">Opcion b</string>
    <string name="opcion_c">Opcion c</string>
    <string name="opcion_d">Opcion d</string>
    <string name="numero_de_pregunta">Numero de pregunta</string>
    <string name="puntuaci_n">Puntuación</string>
    <string name="acceder">Acceder</string>
    <string name="registrarse">Registrarse</string>
    <string name="borrar_usuario">Borrar usuario</string>
    <string name="atr_s">Atrás</string>
    <string name="aceptar">Aceptar</string>
    <string name="contrase_a">contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="bienvenido_a_trivialix_trivialix_es_una_aplicaci_n_que_pondr_a_prueba_tus_conocimientos_de_series_pel_culas_m_sica_y_videojuegos_est_s_preparado_puedes_jugar_registrado_o_sin_registrar_para_registrarte_s_lo_tienes_que_pinchar_en_reg_strate_e_introducir_un_nombre_de_usuario_que_no_exita_ya_y_una_contrase_a_si_ya_estabas_registrado_pero_no_recuerdas_tu_contrase_a_a_la_hora_de_hacer_login_pinchando_en_entrar_pulsa_olvid_mi_contrase_a_e_introduce_una_nueva_sin_embargo_si_est_s_registrado_y_recuerdas_tu_contrase_a_basta_con_que_introduzcas_esos_datos_en_los_campos_habilitados_para_ello_que_aparecen_cuando_pulsas_en_entrar_jugar_en_trivialix_es_muy_sencillo_elige_la_tem_tica_que_m_s_te_guste_y_prep_rate_para_contestar_a_varias_preguntas_de_diferentes_niveles_las_acertar_s_todas_al_final_de_cada_partida_encontrar_s_un_gif_y_tu_puntuaci_n_te_rega_ar_michael_scott_conseguir_s_la_aprobaci_n_del_capit_n_holt_o_tal_vez_jay_gatsby_interpretado_por_leonardo_dicaprio_celebrar_tu_xito_tambi_n_estar_disponible_una_lista_con_el_nombre_y_las_puntuaciones_de_los_5_mejores_jugadores_de_esa_categor_a_ser_s_t_uno_de_ellos_no_pierdas_m_s_tiempo_y_desc_brelo">¡Bienvenido a Trivialix! Trivialix es una aplicación que pondrá a prueba tus conocimientos de series, películas, música y videojuegos. ¿Estás preparado? Puedes jugar registrado o sin registrar. Para registrarte sólo tienes que pinchar en Regístratee introducir un nombre de usuario (que no exita ya) y una contraseña. Si ya estabas registrado pero no recuerdas tu contraseña, a la hora de hacer login(pinchando en Entrar) pulsa Olvidé mi contraseñae introduce una nueva. Sin embargo si estás registrado y recuerdas tu contraseña, basta con que introduzcas esos datos en los campos habilitados para ello que aparecen cuando pulsas en Entrar. ¡Jugar en Trivialix es muy sencillo! Elige la temática que más te guste y prepárate para contestar a varias preguntas de diferentes niveles, ¿las acertarás todas? Al final de cada partida encontrarás un GIF y tu puntuación. ¿Te regañará Michael Scott? ¿Conseguirás la aprobación del Capitán Holt? ¿O tal vez Jay Gatsby interpretado por Leonardo DiCaprio celebrará tu éxito? También estará disponible una lista con el nombre y las puntuaciones de los 5 mejores jugadores de esa categoría, ¿serás tú uno de ellos? ¡No pierdas más tiempo y descúbrelo!</string>
    <string name="acci_n_a_realizar">Acción a realizar</string>
    <string name="ver_ranking">Ver ranking</string>
    <string name="volver">Volver</string>
    <string name="top_3_mejores_jugadores">Top 3 mejores jugadores</string>
    <string name="usuario_1">Usuario 1</string>
    <string name="tu_puntuaci_n">Tu puntuación:</string>
    <string name="su_record">Su record</string>
    <string name="usuario_2">Usuario 2</string>
    <string name="usuario_3">Usuario 3</string>
    <string name="usuario">Usuario</string>
    <string name="seleccione_tem_tica">Seleccione temática:</string>

</resources>